--- a/Readme
+++ b/Readme
@@ -29,18 +29,19 @@ pip install numpy pandas psutil ipaddress scapy matplotlib networkx PyQt6 statis
 
 ### Packet Capture:
 #Default Setting
-- The app captures packets that are traversing through currently connected network by default, but additional methods are available
+- The app captures packets that are traversing through currently connected network by default, but additional methods are available,if the packets exceed a specfic number it will save them in a pacap file and delete a portion of them to save resources.
 #Packet Export
 - Click **Start Capture** to begin capturing packets(you will now if it is currently capturing based on the fact that the time intervel will become highlighted in red).
 - Click **Stop Capture** to halt the capture process.
 - Click **Export** in the file tab which is on the top left to save the captured packets.
 # Packet Import
--Click on the file tab(on the top left corner) and click on import then pick your pcap file
+-Click on the file tab(on the top left corner) and click on import then pick your pcap file.
 -The packets will not instantly load rather they will be rendred sequentially for performance reasons,eventually it will stop rendering packets indicating that the whole pcap has been loaded.
 #live capture
--Click on the live capture opton in the file tap to return back to live capture
+-Click on the live capture opton in the file tap to return back to live capture.
 
-
+### Packet decode/details:
+-Both tabs rely on the user to specify the packet by selecting it,to select a packet simply click on it twice and then once u click on either packet details or packet decode it should display the relevant information.
 
 ### Visualization
 - To generate charts related to sensors, you must first create one or more sensors.
