--- a/Readme
+++ b/Readme
@@ -1,105 +1,1 @@
-Naswail SIEM Tool
-
-## Installation Guide
-
-### Prerequisites
-This software runs **only on Windows(linux is in devlopment among other features) and should be ran as admin**. Before using it, you must install the following:
-
-1. **Npcap**:
-   - Download the **Npcap Installer** from [Npcap Official Site](https://npcap.com/).
-   - Run the installer and follow the on-screen instructions.
-
-2. **Naiswail Repository**:
-   - Download the repository by clicking on **Code → Download ZIP**.
-   - Ensure you are on the **main branch**, not the testing branch.
-   - Extract the ZIP file.
-
-3. **Recommended IDE** (Optional but preferred):
-   - Install **Visual Studio Code** for better debugging and performance but run it as admin otherwise the black list function wont actually block the packets.
-
-4. **Python 3.13.0** (Newer versions may or may not work):
-   - Download Python from [https://www.python.org/](https://www.python.org/).
-   - Ensure `python` is added to the system `PATH` during installation.
-5. **virtual enviroment**(only if the code doesnt run straight away becuse of outdated python or library versions)
-   -Create virtual environment: type "python -m venv venv" into the terminal on vscode
-   -Activate virtual enviroment: type "venv\Scripts\activate"into the terminal on vscode
-   -Specifying inturperter version:type "py -3.13 -m venv venv" into the terminal on vscode
-5a. **TrainAtest2.csv does not exist error ⚠**(related to the virtual enviroment step)
-   -copy and place the trainAtest2.csv file on the same folder directory that has the vnv folder there should be two folders the naswail folder and the vnv with the third being the csv
-5b. **Error in create_map function: [Errno 2] No such file or directory: b'GeoLite2-City.mmdb ⚠**(related to the virtual enviroment step)
-   - similarly to the csv file you have to copy and place the GeoLite2-City.mmdb file into the same directory that houses both the vnv folder and the Naswail folder and trainAtest2(after you have manually added it)
-
-### Required Python Libraries
-Ensure you have Python installed, then open a terminal (Command Prompt or PowerShell) and run:
-
-```sh
-pip install numpy pandas psutil ipaddress scapy matplotlib networkx PyQt6 statistics scikit-learn plotly geoip2 folium bs4
-pip install pandas scikit-learn matplotlib
-pip install geoip2 folium
-pip install geoip2 folium beautifulsoup4
-pip install -U kaleido
-
-
-```
-
----
-
-## Usage Instructions
-
-### Running the Application
-1. Ensure **Npcap** is installed.
-2. **Extract GeoLite2**:
-   - Extract `GeoLite2.rar`.
-   - Copy the extracted file into the main directory (next to `naiswail_main`, `naiswail_tools`, etc.).
-   - Without this step, the **map feature will not work**⚠.
-3. Run the script using Python.
-4. Running it inside **Visual Studio Code** is preferred but optional.
-
----
-
-#### Features Overview
-
-### Packet Capture
-- **Default Capture Mode**: 
-  - Captures packets from the currently connected network.
-  - If the packet count exceeds a specific limit, they are saved to a **PCAP file**, and older packets are removed to save resources.
-  
-- **Packet Export**:
-  - Click **Start Capture** to begin capturing packets.
-  - When capturing, the **time interval will be highlighted in red**.
-  - Click **Stop Capture** to halt the process.
-  - To save captured packets, go to **File → Export**.
-
-- **Packet Import**:
-  - Go to **File → Import**, then select a **PCAP file**.
-  - Packets will **load sequentially** for performance reasons.
-  - Once loading stops, the entire **PCAP file** has been imported.
-
-- **Live Capture Mode**:
-  - Click **File → Live Capture** to return to real-time monitoring.
-
-### Packet Analysis
-- **Packet Decode & Details**:
-  - Select a packet by clicking on it **twice**⚠.
-  - Click **Packet Details** or **Packet Decode** to view relevant information.
-
-### Visualization & Analytics
- - **Charts & Sensors**:
-   -Create one or more sensors under the Sensor Tab.
-   -Click Focus On to generate relevant charts,⚠ otherwise the charts wont show any info on sensors,then go back to oacket filtering and click reset so that the packets aren't filtered based on the sensors.
- -**3D Network Visualization and GeoMap**:
-    -A slight delay of a few seconds may occur depending on the number of packets being processed. It may take a few seconds for both the 3D visualization and GeoMap to render.
-
-### Key Features
-✅ **Real-time Packet Capture** – Monitor live network traffic.  
-✅ **PCAP File Support** – Import and analyze stored packet data.  
-✅ **Advanced Filtering** – Filter packets by **protocol, IP, port, time, and more**.  
-✅ **Snort-Based Anomaly Detection** – Uses **Random Forest** for anomaly detection.  
-✅ **Network Traffic Prediction** – Uses **Linear Regression** to forecast trends (*takes a few seconds*).  
-✅ **3D Network Topology Visualization** – Interactive network mapping.  
-✅ **Geolocation-Based Traffic Analysis** – Maps IP-based geolocations.  
-✅ **Network Activity Detection** – Detects website browsing & HTTP requests.  
-✅ **Corrupt Packet Detection** – Flags and isolates corrupted packets.  
-✅ **Custom Sensor System** – User-defined monitoring points.  
-✅ **Comprehensive Graphs** – Generates **pie charts, histograms, time-series plots, and heatmaps**.  
-✅ **And more!
+#each file that contains the word _page at the end is the actual code to be run while the other files are meant to be the ui files
