modified:   Code_Analysis.py 	modified:   Code_IncidentResponse.py 	modified:   Code_Main.py 	modified:   Code_Tools.py 	modified:   Readme 	modified:   __pycache__/Code_Analysis.cpython-312.pyc 	modified:   __pycache__/Code_IncidentResponse.cpython-312.pyc 	modified:   __pycache__/Code_Tools.cpython-312.pyc 	new file:   core/bootstrap.py 	modified:   core/di.py 	modified:   core/interfaces.py 	modified:   data/packet_file1.pcap 	modified:   data/packet_file2.pcap 	modified:   data/packet_file3.pcap 	new file:   docs/Architecture.md 	new file:   docs/Developer-Guide.md 	new file:   docs/FAQ.md 	new file:   docs/Full-Documentation.md 	new file:   docs/Getting-Started.md 	new file:   docs/Module-Reference.md 	new file:   docs/Overview.md 	new file:   docs/README.md 	new file:   docs/Usage.md 	new file:   plugins/home/AEAnomalyDetector.py 	modified:   plugins/home/AnomalyDetector.py 	modified:   plugins/home/PacketSniffer.py 	modified:   plugins/incident_response/AutopilotEngine.py 	modified:   plugins/incident_response/IntelPreprocessor.py 	modified:   plugins/incident_response/ThreatIntelligence.py 	new file:   plugins/incident_response/TransformerAutopilot.py 	modified:   plugins/incident_response/scrapers/BingSearcher.py 	new file:   plugins/incident_response/scrapers/GoogleSearcher.py 	new file:   plugins/incident_response/scrapers/YouTubeSearcher.py 	modified:   plugins/incident_response/scrapers/__init__.py 	new file:   resources/all_error.pkl 	new file:   resources/base_MLP_scaler.pkl 	new file:   resources/flows.csv 	new file:   resources/mlp_teacher.pth 	modified:   resources/packet_map.png 	new file:   temp.pcap 	modified:   views/UI_Analysis.py

--- a/Readme
+++ b/Readme
@@ -1,5 +1,18 @@
 Naswail SIEM Tool
 
+Documentation
+-------------
+
+Full documentation is available under `docs/`:
+
+- Overview: `docs/Overview.md`
+- Getting Started: `docs/Getting-Started.md`
+- Architecture: `docs/Architecture.md`
+- Module Reference: `docs/Module-Reference.md`
+- Usage Guides: `docs/Usage.md`
+- Developer Guide: `docs/Developer-Guide.md`
+- FAQ: `docs/FAQ.md`
+
 ## Installation Guide
 
 ### Prerequisites
